# practice-cloud-storage

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  file_manager.py  pyproject.toml
database/: models.py  session.py
routes/: __init__.py  auth.py  files.py
schemas/: file.py  user.py
utils/: auth.py  enums.py  exceptions.py  file_manager.py  settings.py
